# info_retrieval_proj

./: .gitignore  lib.py  presentation.md  pyproject.toml  spark-fake-news-prototype.ipynb  spark_fake_rr.pptx
