[tool.poetry]
name = "info-retrieval-proj"
version = "0.1.0"
description = ""
authors = ["rsradev <raddy.radev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.47.0"
pyspark = "^3.5.3"
vadersentiment = "^3.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
